k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-wiki-service
  namespace: go-wiki
  labels:
    app: go-wiki
spec:
  selector:
    app: go-wiki
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
